Changed a few style things for ipad.

--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -968,3 +968,16 @@ a.action:link, a.action:visited, a.action:active, input.action {
 .resnet input[type="checkbox"]{
 	margin: auto;
 }
+
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* Styles */
+	#problem_details{
+		height: 75px;
+	}
+
+}
