Resolves #318. People can no longer check their own tt checklist.

--- a/webapp/training-tracker/css/stats.css
+++ b/webapp/training-tracker/css/stats.css
@@ -31,3 +31,6 @@
 .ui-progressbar-value{
 	box-sizing: content-box !important;	
 }
+.chkbox-container input[type="checkbox"]{
+	margin-right: 0.5em;
+}
