Removed leaving employees, Changed theme 'master' to nrporter.

--- a/webapp/themes/my/themes/chili-cookoff/my.css
+++ b/webapp/themes/my/themes/chili-cookoff/my.css
@@ -38,7 +38,7 @@ html, body{
 	height: 210px;
 }
 
-.user-mtbatchelder #webapp-head .container {
+.user-nrporter #webapp-head .container {
 	background-image: url(themes/chili-cookoff/images/hot-and-spicy-angle.png);
 	background-repeat: no-repeat;
 	background-position: top center;
