--- a/webapp/themes/my/themes/thanksgiving-11/my.css
+++ b/webapp/themes/my/themes/thanksgiving-11/my.css
@@ -6,7 +6,7 @@ html, body {
 	background: transparent url(themes/thanksgiving-11/images/bg.png) top center no-repeat;
 }
 
-.user-mtbatchelder #page,
+.user-nrporter #page,
 .month-november.day-of-month-23 #page,
 .month-november.day-of-month-24 #page {
 	background-image: url(themes/thanksgiving-11/images/bg-hats.png);
