Resolves #358. Switched Update and Close Ticket buttons.

--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -1015,7 +1015,7 @@ a.action:link, a.action:visited, a.action:active, input.action {
 }
 
 .update_ticket{
-	margin-left: 2em;
+	margin-right: 2em;
 }
 
 .submit-buttons{
