--- a/webapp/training-tracker/templates/style.css
+++ b/webapp/training-tracker/templates/style.css
@@ -31,7 +31,6 @@
 }
 
 .hidden{
-	/* TODO: we might have this one declared centrally called clear */
 	visibility:hidden;
 }
 
@@ -40,10 +39,24 @@
 }
 
 .title{
-	/* TODO: don't do this shizzle here */
 	margin-bottom: .5em;
 }
 .tt-warning{
-	/* TODO: we have a warning style, I *think*.  Perhaps make this style more app specific... tt-warning */
 	background: #FAA732; 
 }
+
+.red{
+	color: #C43C35;
+}
+.red:hover{
+	color: #C43C35;
+}
+
+.green{
+	color: #57A957;
+}
+
+.green:hover{
+	color: #57A957;
+}
+
