--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -366,7 +366,9 @@ tr:hover .muted{
 .call-info-table{
 	border: hidden 1px;
 }
-
+.right{
+	float:right;
+}
 .show-border{
 	border: solid 1px; 
 }
