Updating ITSurplus to FontAwesome

--- a/webapp/itsurplus/templates/style.css
+++ b/webapp/itsurplus/templates/style.css
@@ -14,17 +14,8 @@
 	float: left;
 	padding-right: 2em;
 	overflow: hidden;
+	width: 130px;
 }
-
-.nav-icon{
-	padding-left: 20px !important;
-	min-height: 16px !important;
-	background-position: 0px 5px;
-}
-
-.nav-home{ background: url(/images/icons/16x16/actions/go-home.png) no-repeat; }
-.nav-help{ background: url(/images/icons/16x16/life-saver.png) no-repeat; }
-.nav-pickup{ background: url(/images/icons/16x16/places/start-here.png) no-repeat; }
 
 .webapp-head #search{
 	margin-top: 1.25em;
@@ -52,8 +43,9 @@
 }
 
 #price-slider { clear: both; }
-#title-icon {
-	padding-left: 43px !important;
-	background: url(/images/icons/32x32/status/user-trash-full.png) no-repeat;
-	background-position: 5px -1px;
+#title-icon i{
+	line-height: 36px !important;
+}
+.nav-icon i{
+	line-height: 22px !important;
 }
