--- a/webapp/themes/my/themes/lgbtq/my.css
+++ b/webapp/themes/my/themes/lgbtq/my.css
@@ -6,6 +6,15 @@ html, body {
 	background: url(themes/lgbtq/images/flag.png) no-repeat 0 35px;
 }
 
+.myplymouth .webapp-head h1 a {
+	background: url(themes/lgbtq/images/my_logo.png?v=1) no-repeat center center;
+	display: block;
+	height: 77px;
+	left: -12px;
+	position: relative;
+	text-indent: -9999999px;
+	width: 412px;
+}
 #webapp-head,
 #webapp-nav,
 #webapp-avant-body {
