Adding in better logic to display Zimbra aliases

--- a/webapp/ape/templates/style.css
+++ b/webapp/ape/templates/style.css
@@ -99,6 +99,7 @@
 li.click:hover { background-color:#FFFFBB; }
 
 dl dd, dl dt{float: left;}
+.zimbra-aliases{float: left;}
 
 dl .flush dt, .apedata .flush li { margin-left: 0;}
 
