--- a/webapp/ape/templates/style.css
+++ b/webapp/ape/templates/style.css
@@ -99,7 +99,7 @@
 li.click:hover { background-color:#FFFFBB; }
 
 dl dd, dl dt{float: left;}
-.zimbra-aliases{float: left;}
+.zimbra-aliases,.zimbra-lists{float: left;}
 
 dl .flush dt, .apedata .flush li { margin-left: 0;}
 
